# mini-map

./: .gitattributes  .gitignore  Cargo.toml  index.html  readme.md
docs/: index.html  pipeline-front-5519cc3b9d4b05d3.js  pipeline-front-5519cc3b9d4b05d3_bg.wasm  pipeline-front-e33cbc7431b047a0.js  pipeline-front-e33cbc7431b047a0_bg.wasm  tailwind-abfec71ec6d3ced.css  tailwind-b0caf6b0170873ca.css
src/components/: app.rs  map.rs  mod.rs  point_actions.rs  point_form.rs  point_list.rs  point_manager.rs  types.rs
